# libeevee

./: .gitignore  CMakeLists.txt
examples/hello_world/: CMakeLists.txt  main.cpp
include/Eevee/: App.hpp  Eevee.hpp  Window.hpp
include/Eevee/Mac/: App.hpp  EeveeApp.h  EeveeAppDelegate.h  EeveeWindowDelegate.h  Window.hpp
include/Eevee/Native/: App.hpp  Window.hpp
include/Eevee/Win32/: Window.hpp
src/: App.cpp  Window.cpp
src/Mac/: App.mm  EeveeApp.m  EeveeAppDelegate.m  EeveeWindowDelegate.m  Window.mm
src/Win32/: Window.cpp
